[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game_scene/GameScene.gd" type="Script" id=1]
[ext_resource path="res://assets/df/grind demolished.tres" type="DynamicFont" id=2]

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="p1cont" type="Control" parent="Panel/HBoxContainer"]
margin_right = 203.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/p1cont"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/p1cont/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 190.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/p1cont/MarginContainer/VBoxContainer"]
margin_right = 175.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Player 1
"
align = 1
valign = 1

[node name="P1ScoreLabel" type="Label" parent="Panel/HBoxContainer/p1cont/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 175.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
align = 1
valign = 1

[node name="YT1" type="CenterContainer" parent="Panel/HBoxContainer/p1cont/MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 175.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/p1cont/MarginContainer/VBoxContainer/YT1"]
margin_top = 211.0
margin_right = 175.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 2 )
text = "Your turn!"

[node name="gridcont" type="Control" parent="Panel/HBoxContainer"]
margin_left = 207.0
margin_right = 816.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/gridcont"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/gridcont/CenterContainer"]
margin_left = 304.0
margin_top = 300.0
margin_right = 304.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="p2cont" type="Control" parent="Panel/HBoxContainer"]
margin_left = 820.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/p2cont"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/p2cont/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 189.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/p2cont/MarginContainer/VBoxContainer"]
margin_right = 174.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Player 2
"
align = 1
valign = 1

[node name="P2ScoreLabel" type="Label" parent="Panel/HBoxContainer/p2cont/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 174.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
align = 1
valign = 1

[node name="YT2" type="CenterContainer" parent="Panel/HBoxContainer/p2cont/MarginContainer/VBoxContainer"]
visible = false
margin_top = 113.0
margin_right = 175.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/p2cont/MarginContainer/VBoxContainer/YT2"]
margin_top = 211.0
margin_right = 175.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 2 )
text = "Your turn!"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Congrats!"

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
